simplify onTabComplete with switch statement